[gd_scene load_steps=5 format=3 uid="uid://cm8k25tji5hlu"]

[ext_resource type="PackedScene" uid="uid://dmwv25fu0o4fw" path="res://Scenes/Player/player.tscn" id="1_3gdom"]
[ext_resource type="Script" path="res://Scripts/Game/game.gd" id="1_8hu15"]
[ext_resource type="Script" path="res://Scripts/Game/room_spawner.gd" id="2_lv03j"]
[ext_resource type="Texture2D" uid="uid://cndcyupj3losr" path="res://Assets/Textures/ui/shop.png" id="4_kfovl"]

[node name="Game" type="Node3D"]
script = ExtResource("1_8hu15")

[node name="Entities" type="Node3D" parent="."]

[node name="Enemies" type="Node3D" parent="."]

[node name="RoomSpawner" type="Node3D" parent="."]
script = ExtResource("2_lv03j")

[node name="WaveTimer" type="Timer" parent="RoomSpawner"]
wait_time = 3.0
one_shot = true

[node name="Player" parent="." instance=ExtResource("1_3gdom")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.66192, 0)

[node name="NextRoundTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="shop" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="shop bg" type="Sprite2D" parent="shop"]
position = Vector2(960, 540)
texture = ExtResource("4_kfovl")

[connection signal="timeout" from="RoomSpawner/WaveTimer" to="RoomSpawner" method="_on_wave_timer_timeout"]
[connection signal="timeout" from="NextRoundTimer" to="." method="startShop"]
